# sreader

./: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  readme.org  snd_analizer.c  snd_analizer.h  tasks.org  test.c
doc/: ADC Sampling and FFT on Raspberry Pi Pico.html  Analog Input_ Filtering and Smoothing.html  Arduino и прерывания таймера.html  CircuitPython и MicroPython.html  FFT.html  FastFourier.html  Raspberry Pi Pico на МК RP2040_ начало.html  fft.org
