cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(snd_analizer C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(snd_analizer snd_analizer.c )
pico_enable_stdio_usb(snd_analizer 1)
pico_enable_stdio_uart(snd_analizer 1)
pico_add_extra_outputs(snd_analizer)
target_include_directories(snd_analizer PUBLIC ./include)
target_link_libraries(snd_analizer pico_stdlib hardware_adc hardware_i2c)
